# Python_Scripts

./: pyproject.toml
TOML/: ReadMe.md  output.toml  output_file.txt  text_to_toml.py  tomllib_tutorial.py  write_toml.py  write_toml_fil.py
Update_AI-HUB/: ReadMe.md
cronjobs/: ReadMe.md  import_job.py  print_job.txt
cronjobs/bat_file_jobs/: call_batch.py  main.py  run_python_script.bat
cronjobs/bat_file_jobs/collection_batch/: ReadMe.md  fake_window.bat  promt_name.bat  test.bat
visual_jobs/: main.py
